adjust setting routes (#21)
